@@ -23,7 +23,8 @@ enum evhttp_connection_error {
 	EVCON_HTTP_TIMEOUT,
 	EVCON_HTTP_EOF,
 	EVCON_HTTP_INVALID_HEADER,
-	EVCON_HTTP_BUFFER_ERROR
+	EVCON_HTTP_BUFFER_ERROR,
+	EVCON_HTTP_REQUEST_CANCEL
 };
 
 struct evbuffer;
