@@ -97,7 +97,8 @@ Changes in current version:
  o deprecate timeout_* event functions by moving them to event_compat.h
  o Move	windows gettimeofday replacement into a new evutil_gettimeofday().
  o Make configure script work on IRIX.
-
+ o provide a method for canceling ongoing http requests.
+ 
 
 Changes in 1.4.0:
  o allow \r or \n individually to separate HTTP headers instead of the standard "\r\n"; from Charles Kerr.
